more z-index fixes

--- a/user-backgrounds.css
+++ b/user-backgrounds.css
@@ -20,7 +20,6 @@
 .userPopout-3XzG_A .header-2BwW8b,
 .userPopout-3XzG_A .scroller-2FKFPG,
 .userPopout-3XzG_A .footer-1fjuF6,
-.flex-1O1GKY,
 .bodyInnerWrapper-Z8WDxe,
 .headerText-2sdzFM,
 .date-YN6TCS+.customStatus-1bh2V9 {
